# csv-manager

./: CHANGELOG.md  LICENSE  Makefile  csv-manager.cabal  stack.yaml  test.csv  test.xxl.csv
.github/workflows/: ci.yml
app/: Main.hs
src/: CsvManager.hs  Prelude.hs  Row.hs  SearchEngine.hs
