cabal-version:       2.4
name:                csv-manager
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             MIT
license-file:        LICENSE
author:              Daniel Pfefferkorn
maintainer:          Daniel Pfefferkorn <pfefferkorn@silpion.de>
copyright:           2021 Daniel Pfefferkorn
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

common common-options
  build-depends:       base-noprelude ^>= 4.13.0.0
                     , bytestring
                     , relude
                     , cassava
                     , vector
                     , text
                     , aeson
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     CsvManager
                     , Prelude

executable csv-manager
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       csv-manager
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
